[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/jedialogue/Gui/GraphEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/jedialogue/Gui/Dock.gd" type="Script" id=2]
[ext_resource path="res://addons/jedialogue/Gui/CreateNodeDialogue.tscn" type="PackedScene" id=3]

[node name="Dock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuProject" type="MenuButton" parent="VBox/HBox"]
margin_right = 57.0
margin_bottom = 20.0
text = "Project"
items = [ "Open", null, 0, false, false, 0, 0, null, "", false ]

[node name="MenuFile" type="MenuButton" parent="VBox/HBox"]
margin_left = 61.0
margin_right = 96.0
margin_bottom = 20.0
text = "File"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save As", null, 0, false, false, 3, 0, null, "", false, "Close", null, 0, false, false, 4, 0, null, "", false ]

[node name="MenuEdit" type="MenuButton" parent="VBox/HBox"]
margin_left = 100.0
margin_right = 136.0
margin_bottom = 20.0
text = "Edit"
items = [ "Create Node", null, 0, false, false, 0, 0, null, "", false ]

[node name="Panel" type="Panel" parent="VBox"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="VBox/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateNodeDialog" parent="." instance=ExtResource( 3 )]

[node name="RightClickMenu" type="PopupMenu" parent="."]
margin_left = 297.32
margin_top = 225.586
margin_right = 317.32
margin_bottom = 245.586
items = [ "Create", null, 0, false, false, 0, 0, null, "", false, "Delete", null, 0, false, false, 1, 0, null, "", false ]

[node name="ProjectOpenDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a Project"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON files" )
current_dir = "/home/jellonator/Workspace/RealWork/DialogueEditor"
current_path = "/home/jellonator/Workspace/RealWork/DialogueEditor/"

[node name="FileOpenDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON files" )
current_dir = "/home/jellonator/Workspace/RealWork/DialogueEditor"
current_path = "/home/jellonator/Workspace/RealWork/DialogueEditor/"

[node name="FileSaveDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
resizable = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.json ; JSON files" )
current_dir = "/home/jellonator/Workspace/RealWork/DialogueEditor"
current_path = "/home/jellonator/Workspace/RealWork/DialogueEditor/"
[connection signal="connection_request" from="VBox/Panel/GraphEdit" to="VBox/Panel/GraphEdit" method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="VBox/Panel/GraphEdit" to="VBox/Panel/GraphEdit" method="_on_GraphEdit_disconnection_request"]
[connection signal="gui_input" from="VBox/Panel/GraphEdit" to="VBox/Panel/GraphEdit" method="_on_GraphEdit_gui_input"]
[connection signal="show_menu" from="VBox/Panel/GraphEdit" to="." method="_on_GraphEdit_show_menu"]
[connection signal="create_dialogue" from="CreateNodeDialog" to="." method="_on_CreateNodeDialogue_create_dialogue"]
[connection signal="id_pressed" from="RightClickMenu" to="." method="_on_RightClickMenu_id_pressed"]
[connection signal="file_selected" from="ProjectOpenDialog" to="." method="_on_ProjectOpenDialog_file_selected"]
[connection signal="file_selected" from="FileOpenDialog" to="." method="_on_FileOpenDialog_file_selected"]
[connection signal="file_selected" from="FileSaveDialog" to="." method="_on_FileSaveDialog_file_selected"]
